2019-07-16  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1253

	* 3rdparts/disort1.2/ErrPack.f
	Replaced STOP statement with RETURN to avoid hard shutdown of
	ARTS on convergence error.

	* src/m_psd.cc:
	Allow D_m and N_0^* to be used as parameters.

	* src/m_retrieval.cc:
	Fixed error messages when dimensions of covariance matrix
	are wrong.

	src/rt4.cc:
	Fix required to avoid run_rt4 method from crashing when maximum
	number of stream is reached.


2019-07-15  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1252

	* controlfiles/artscomponents/wfuns/JHyb_*.xml.gz:

	Replace corrupted gz files with fresh versions provided by Richard.

2019-07-15  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1251

	* src/m_basic_types.cc, src/methods.cc:

	Don't define DiagonalMatrix as a template method. Since only explicit
	overloads for two types exist and no generic implementation,
	templates are not needed.

2019-07-15  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1250

	* Fix number of issues found by the clang analyzer.

	* src/m_cloudradar.cc: Comment out unimplemented iy_aux features.

	* 3rdparty/invlib/src/invlib/map.cpp: Initialize member iterations.

	* src/disort.cc: Reduce scope of pfct_za_grid_size.

	* src/libmicrohttpd/daemon.c: Remove shadowing variable.

	* src/m_linemixing.cc: Improve continue condition.

	Negative values should be excluded to avoid false
	positive from clang analyzer about possible use of a
	garbage value. The analyzer doesn't know that our signed
	Index can only contain positive values here.

	* src/legendre.cc: Remove dead assignment.

	* src/montecarlo.cc:

	Define evop0 closer to where it's used.

	Define I1 and Q1 in local scope only.

	* src/m_montecarlo.cc: Use continue instead of break for consistency.

	* src/linescaling.cc, src/telsem.cc:

	Define helper variables locally in scope.

	* src/check_input.cc:

	Add missing initialization of any_nlte_lines to avoid use of an
	uninitialized value.
